@@ -39,7 +39,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertRequestBuilderThrows;
@@ -260,32 +259,26 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         boolean storeOffsets = false;
         boolean storeTermVectors = false;
         switch (config) {
-            case 0: {
+            case 0 -> {
                 // do nothing
-                break;
             }
-            case 1: {
+            case 1 -> {
                 storeTermVectors = true;
-                break;
             }
-            case 2: {
+            case 2 -> {
                 storeTermVectors = true;
                 storePositions = true;
-                break;
             }
-            case 3: {
+            case 3 -> {
                 storeTermVectors = true;
                 storeOffsets = true;
-                break;
             }
-            case 4: {
+            case 4 -> {
                 storeTermVectors = true;
                 storePositions = true;
                 storeOffsets = true;
-                break;
             }
-            default:
-                throw new IllegalArgumentException("Unsupported option: " + config);
+            default -> throw new IllegalArgumentException("Unsupported option: " + config);
         }
         ft.setStoreTermVectors(storeTermVectors);
         ft.setStoreTermVectorOffsets(storeOffsets);
@@ -1019,7 +1012,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
 
         // Get search shards
         ClusterSearchShardsResponse searchShardsResponse = client().admin().cluster().prepareSearchShards("test").get();
-        List<Integer> shardIds = Arrays.stream(searchShardsResponse.getGroups()).map(s -> s.getShardId().id()).collect(Collectors.toList());
+        List<Integer> shardIds = Arrays.stream(searchShardsResponse.getGroups()).map(s -> s.getShardId().id()).toList();
 
         // request termvectors of artificial document from each shard
         int sumTotalTermFreq = 0;
