@@ -19,7 +19,6 @@ import org.elasticsearch.cluster.metadata.IndexAbstraction;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.logging.DeprecationCategory;
 import org.elasticsearch.common.logging.DeprecationLogger;
@@ -38,7 +37,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class TransportGetAliasesAction extends TransportMasterNodeReadAction<GetAliasesRequest, GetAliasesResponse> {
     private static final DeprecationLogger deprecationLogger = DeprecationLogger.getLogger(TransportGetAliasesAction.class);
@@ -84,7 +82,7 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
         // resolve all concrete indices upfront and warn/error later
         final String[] concreteIndices = indexNameExpressionResolver.concreteIndexNamesWithSystemIndexAccess(state, request);
         final SystemIndexAccessLevel systemIndexAccessLevel = indexNameExpressionResolver.getSystemIndexAccessLevel();
-        ImmutableOpenMap<String, List<AliasMetadata>> aliases = state.metadata().findAliases(request.aliases(), concreteIndices);
+        Map<String, List<AliasMetadata>> aliases = state.metadata().findAliases(request.aliases(), concreteIndices);
         listener.onResponse(
             new GetAliasesResponse(
                 postProcess(request, concreteIndices, aliases, state, systemIndexAccessLevel, threadPool.getThreadContext(), systemIndices),
@@ -96,17 +94,17 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
     /**
      * Fills alias result with empty entries for requested indices when no specific aliases were requested.
      */
-    static ImmutableOpenMap<String, List<AliasMetadata>> postProcess(
+    static Map<String, List<AliasMetadata>> postProcess(
         GetAliasesRequest request,
         String[] concreteIndices,
-        ImmutableOpenMap<String, List<AliasMetadata>> aliases,
+        Map<String, List<AliasMetadata>> aliases,
         ClusterState state,
         SystemIndexAccessLevel systemIndexAccessLevel,
         ThreadContext threadContext,
         SystemIndices systemIndices
     ) {
         boolean noAliasesSpecified = request.getOriginalAliases() == null || request.getOriginalAliases().length == 0;
-        ImmutableOpenMap.Builder<String, List<AliasMetadata>> mapBuilder = ImmutableOpenMap.builder(aliases);
+        Map<String, List<AliasMetadata>> mapBuilder = new HashMap<>(aliases);
         for (String index : concreteIndices) {
             IndexAbstraction ia = state.metadata().getIndicesLookup().get(index);
             assert ia.getType() == IndexAbstraction.Type.CONCRETE_INDEX;
@@ -122,7 +120,7 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
                 assert previous == null;
             }
         }
-        final ImmutableOpenMap<String, List<AliasMetadata>> finalResponse = mapBuilder.build();
+        final Map<String, List<AliasMetadata>> finalResponse = Collections.unmodifiableMap(mapBuilder);
         if (systemIndexAccessLevel != SystemIndexAccessLevel.ALL) {
             checkSystemIndexAccess(request, systemIndices, state, finalResponse, systemIndexAccessLevel, threadContext);
         }
@@ -144,7 +142,7 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
                 .stream()
                 .filter(alias -> alias.getDataStreams().contains(requestedDataStream))
                 .filter(alias -> noAliasesSpecified || Regex.simpleMatch(request.aliases(), alias.getName()))
-                .collect(Collectors.toList());
+                .toList();
             if (aliases.isEmpty() == false) {
                 result.put(requestedDataStream, aliases);
             }
@@ -156,15 +154,15 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
         GetAliasesRequest request,
         SystemIndices systemIndices,
         ClusterState state,
-        ImmutableOpenMap<String, List<AliasMetadata>> aliasesMap,
+        Map<String, List<AliasMetadata>> aliasesMap,
         SystemIndexAccessLevel systemIndexAccessLevel,
         ThreadContext threadContext
     ) {
-        final Predicate<IndexMetadata> systemIndexAccessAllowPredicate;
+        final Predicate<String> systemIndexAccessAllowPredicate;
         if (systemIndexAccessLevel == SystemIndexAccessLevel.NONE) {
-            systemIndexAccessAllowPredicate = indexMetadata -> false;
+            systemIndexAccessAllowPredicate = indexName -> false;
         } else if (systemIndexAccessLevel == SystemIndexAccessLevel.RESTRICTED) {
-            systemIndexAccessAllowPredicate = systemIndices.getProductSystemIndexMetadataPredicate(threadContext);
+            systemIndexAccessAllowPredicate = systemIndices.getProductSystemIndexNamePredicate(threadContext);
         } else {
             throw new IllegalArgumentException("Unexpected system index access level: " + systemIndexAccessLevel);
         }
@@ -174,7 +172,7 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
         aliasesMap.keySet().forEach(indexName -> {
             IndexMetadata index = state.metadata().index(indexName);
             if (index != null && index.isSystem()) {
-                if (systemIndexAccessAllowPredicate.test(index) == false) {
+                if (systemIndexAccessAllowPredicate.test(indexName) == false) {
                     if (systemIndices.isNetNewSystemIndex(indexName)) {
                         netNewSystemIndices.add(indexName);
                     } else {
@@ -193,51 +191,7 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
             );
         }
         if (netNewSystemIndices.isEmpty() == false) {
-            throw systemIndices.netNewSystemIndexAccessException(threadContext, netNewSystemIndices);
-        }
-        checkSystemAliasAccess(request, systemIndices, systemIndexAccessLevel, threadContext);
-    }
-
-    private static void checkSystemAliasAccess(
-        GetAliasesRequest request,
-        SystemIndices systemIndices,
-        SystemIndexAccessLevel systemIndexAccessLevel,
-        ThreadContext threadContext
-    ) {
-        final Predicate<String> systemIndexAccessAllowPredicate;
-        if (systemIndexAccessLevel == SystemIndexAccessLevel.NONE) {
-            systemIndexAccessAllowPredicate = name -> true;
-        } else if (systemIndexAccessLevel == SystemIndexAccessLevel.RESTRICTED) {
-            systemIndexAccessAllowPredicate = systemIndices.getProductSystemIndexNamePredicate(threadContext).negate();
-        } else {
-            throw new IllegalArgumentException("Unexpected system index access level: " + systemIndexAccessLevel);
-        }
-
-        final List<String> systemAliases = new ArrayList<>();
-        final List<String> netNewSystemAliases = new ArrayList<>();
-        for (String alias : request.aliases()) {
-            if (systemIndices.isSystemName(alias)) {
-                if (systemIndexAccessAllowPredicate.test(alias)) {
-                    if (systemIndices.isNetNewSystemIndex(alias)) {
-                        netNewSystemAliases.add(alias);
-                    } else {
-                        systemAliases.add(alias);
-                    }
-                }
-            }
-        }
-
-        if (systemAliases.isEmpty() == false) {
-            deprecationLogger.warn(
-                DeprecationCategory.API,
-                "open_system_alias_access",
-                "this request accesses aliases with names reserved for system indices: {}, but in a future major version, direct "
-                    + "access to system indices and their aliases will not be allowed",
-                systemAliases
-            );
-        }
-        if (netNewSystemAliases.isEmpty() == false) {
-            throw systemIndices.netNewSystemIndexAccessException(threadContext, netNewSystemAliases);
+            throw SystemIndices.netNewSystemIndexAccessException(threadContext, netNewSystemIndices);
         }
     }
 }
