@@ -10,17 +10,17 @@ package org.elasticsearch.cluster.service;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
-import org.elasticsearch.Assertions;
+import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.cluster.AckedClusterStateTaskListener;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterState.Builder;
+import org.elasticsearch.cluster.ClusterStateAckListener;
 import org.elasticsearch.cluster.ClusterStatePublicationEvent;
 import org.elasticsearch.cluster.ClusterStateTaskConfig;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
-import org.elasticsearch.cluster.ClusterStateTaskExecutor.ClusterTasksResult;
 import org.elasticsearch.cluster.ClusterStateTaskListener;
+import org.elasticsearch.cluster.ClusterStateUpdateTask;
+import org.elasticsearch.cluster.NotMasterException;
 import org.elasticsearch.cluster.coordination.ClusterStatePublisher;
 import org.elasticsearch.cluster.coordination.FailedToCommitClusterStateException;
 import org.elasticsearch.cluster.metadata.ProcessClusterEventTimeoutException;
@@ -39,23 +39,26 @@ import org.elasticsearch.common.util.concurrent.FutureUtils;
 import org.elasticsearch.common.util.concurrent.PrioritizedEsThreadPoolExecutor;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.node.Node;
+import org.elasticsearch.tasks.Task;
+import org.elasticsearch.tasks.TaskAwareRequest;
+import org.elasticsearch.tasks.TaskId;
+import org.elasticsearch.tasks.TaskManager;
 import org.elasticsearch.threadpool.Scheduler;
 import org.elasticsearch.threadpool.ThreadPool;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
 import java.util.function.LongSupplier;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.common.util.concurrent.EsExecutors.daemonThreadFactory;
+import static org.elasticsearch.core.Strings.format;
 
 public class MasterService extends AbstractLifecycleComponent {
     private static final Logger logger = LogManager.getLogger(MasterService.class);
@@ -75,6 +78,8 @@ public class MasterService extends AbstractLifecycleComponent {
 
     static final String MASTER_UPDATE_THREAD_NAME = "masterService#updateTask";
 
+    public static final String STATE_UPDATE_ACTION_NAME = "publish_cluster_state_update";
+
     ClusterStatePublisher clusterStatePublisher;
 
     private final String nodeName;
@@ -85,13 +90,14 @@ public class MasterService extends AbstractLifecycleComponent {
     private final TimeValue starvationLoggingThreshold;
 
     protected final ThreadPool threadPool;
+    private final TaskManager taskManager;
 
     private volatile PrioritizedEsThreadPoolExecutor threadPoolExecutor;
     private volatile Batcher taskBatcher;
 
     private final ClusterStateUpdateStatsTracker clusterStateUpdateStatsTracker = new ClusterStateUpdateStatsTracker();
 
-    public MasterService(Settings settings, ClusterSettings clusterSettings, ThreadPool threadPool) {
+    public MasterService(Settings settings, ClusterSettings clusterSettings, ThreadPool threadPool, TaskManager taskManager) {
         this.nodeName = Objects.requireNonNull(Node.NODE_NAME_SETTING.get(settings));
 
         this.slowTaskLoggingThreshold = MASTER_SERVICE_SLOW_TASK_LOGGING_THRESHOLD_SETTING.get(settings);
@@ -100,6 +106,7 @@ public class MasterService extends AbstractLifecycleComponent {
         this.starvationLoggingThreshold = MASTER_SERVICE_STARVATION_LOGGING_THRESHOLD_SETTING.get(settings);
 
         this.threadPool = threadPool;
+        this.taskManager = taskManager;
     }
 
     private void setSlowTaskLoggingThreshold(TimeValue slowTaskLoggingThreshold) {
@@ -148,44 +155,53 @@ public class MasterService extends AbstractLifecycleComponent {
         }
 
         @Override
-        protected void onTimeout(List<? extends BatchedTask> tasks, TimeValue timeout) {
+        protected void onTimeout(BatchedTask task, TimeValue timeout) {
             threadPool.generic()
-                .execute(
-                    () -> tasks.forEach(
-                        task -> ((UpdateTask) task).listener.onFailure(
-                            task.source,
-                            new ProcessClusterEventTimeoutException(timeout, task.source)
-                        )
-                    )
-                );
+                .execute(() -> ((UpdateTask) task).onFailure(new ProcessClusterEventTimeoutException(timeout, task.source)));
         }
 
         @Override
-        protected void run(Object batchingKey, List<? extends BatchedTask> tasks, String tasksSummary) {
-            ClusterStateTaskExecutor<Object> taskExecutor = (ClusterStateTaskExecutor<Object>) batchingKey;
-            List<UpdateTask> updateTasks = (List<UpdateTask>) tasks;
-            runTasks(new TaskInputs(taskExecutor, updateTasks, tasksSummary));
+        protected void run(Object batchingKey, List<? extends BatchedTask> tasks, BatchSummary tasksSummary) {
+            runTasks((ClusterStateTaskExecutor<ClusterStateTaskListener>) batchingKey, (List<UpdateTask>) tasks, tasksSummary);
         }
 
         class UpdateTask extends BatchedTask {
-            final ClusterStateTaskListener listener;
+            private final ClusterStateTaskListener listener;
+            private final Supplier<ThreadContext.StoredContext> threadContextSupplier;
 
             UpdateTask(
                 Priority priority,
                 String source,
-                Object task,
-                ClusterStateTaskListener listener,
+                ClusterStateTaskListener task,
+                Supplier<ThreadContext.StoredContext> threadContextSupplier,
                 ClusterStateTaskExecutor<?> executor
             ) {
                 super(priority, source, executor, task);
-                this.listener = listener;
+                this.threadContextSupplier = threadContextSupplier;
+                this.listener = task;
             }
 
             @Override
             public String describeTasks(List<? extends BatchedTask> tasks) {
-                return ((ClusterStateTaskExecutor<Object>) batchingKey).describeTasks(
-                    tasks.stream().map(BatchedTask::getTask).collect(Collectors.toList())
+                return ((ClusterStateTaskExecutor<ClusterStateTaskListener>) batchingKey).describeTasks(
+                    tasks.stream().map(task -> (ClusterStateTaskListener) task.task).toList()
                 );
+            }
+
+            public void onFailure(Exception e) {
+                try (ThreadContext.StoredContext ignore = threadContextSupplier.get()) {
+                    listener.onFailure(e);
+                } catch (Exception inner) {
+                    inner.addSuppressed(e);
+                    logger.error("exception thrown by listener notifying of failure", inner);
+                }
+            }
+
+            @Nullable
+            public ContextPreservingAckListener wrapInTaskContext(@Nullable ClusterStateAckListener clusterStateAckListener) {
+                return clusterStateAckListener == null
+                    ? null
+                    : new ContextPreservingAckListener(Objects.requireNonNull(clusterStateAckListener), threadContextSupplier);
             }
         }
     }
@@ -209,14 +225,21 @@ public class MasterService extends AbstractLifecycleComponent {
         return Thread.currentThread().getName().contains('[' + MASTER_UPDATE_THREAD_NAME + ']');
     }
 
+    public static boolean assertMasterUpdateOrTestThread() {
+        return ThreadPool.assertCurrentThreadPool(MASTER_UPDATE_THREAD_NAME);
+    }
+
     public static boolean assertNotMasterUpdateThread(String reason) {
         assert isMasterUpdateThread() == false
             : "Expected current thread [" + Thread.currentThread() + "] to not be the master service thread. Reason: [" + reason + "]";
         return true;
     }
 
-    private void runTasks(TaskInputs taskInputs) {
-        final String summary = taskInputs.summary;
+    private void runTasks(
+        ClusterStateTaskExecutor<ClusterStateTaskListener> executor,
+        List<Batcher.UpdateTask> updateTasks,
+        BatchSummary summary
+    ) {
         if (lifecycle.started() == false) {
             logger.debug("processing [{}]: ignoring, master service not started", summary);
             return;
@@ -225,26 +248,70 @@ public class MasterService extends AbstractLifecycleComponent {
         logger.debug("executing cluster state update for [{}]", summary);
         final ClusterState previousClusterState = state();
 
-        if (previousClusterState.nodes().isLocalNodeElectedMaster() == false && taskInputs.runOnlyWhenMaster()) {
+        if (previousClusterState.nodes().isLocalNodeElectedMaster() == false && executor.runOnlyOnMaster()) {
             logger.debug("failing [{}]: local node is no longer master", summary);
-            taskInputs.onNoLongerMaster();
+            updateTasks.forEach(t -> t.onFailure(new NotMasterException("no longer master, failing [" + t.source() + "]")));
             return;
         }
 
         final long computationStartTime = threadPool.rawRelativeTimeInMillis();
-        final TaskOutputs taskOutputs = calculateTaskOutputs(taskInputs, previousClusterState);
-        taskOutputs.notifyFailedTasks();
+        final var executionResults = updateTasks.stream().map(ExecutionResult::new).toList();
+        final var newClusterState = patchVersions(
+            previousClusterState,
+            executeTasks(previousClusterState, executionResults, executor, summary)
+        );
+        // fail all tasks that have failed
+        for (final var executionResult : executionResults) {
+            if (executionResult.failure != null) {
+                executionResult.updateTask.onFailure(executionResult.failure);
+            }
+        }
         final TimeValue computationTime = getTimeSince(computationStartTime);
         logExecutionTime(computationTime, "compute cluster state update", summary);
 
-        if (taskOutputs.clusterStateUnchanged()) {
+        if (previousClusterState == newClusterState) {
             final long notificationStartTime = threadPool.rawRelativeTimeInMillis();
-            taskOutputs.notifySuccessfulTasksOnUnchangedClusterState();
+            for (final var executionResult : executionResults) {
+                final var contextPreservingAckListener = executionResult.getContextPreservingAckListener();
+                if (contextPreservingAckListener != null) {
+                    // no need to wait for ack if nothing changed, the update can be counted as acknowledged
+                    contextPreservingAckListener.onAckSuccess();
+                }
+                executionResult.onClusterStateUnchanged(newClusterState);
+            }
             final TimeValue executionTime = getTimeSince(notificationStartTime);
             logExecutionTime(executionTime, "notify listeners on unchanged cluster state", summary);
             clusterStateUpdateStatsTracker.onUnchangedClusterState(computationTime.millis(), executionTime.millis());
         } else {
-            final ClusterState newClusterState = taskOutputs.newClusterState;
+            try (var ignored = threadPool.getThreadContext().newTraceContext()) {
+                publishClusterStateUpdate(executor, summary, previousClusterState, executionResults, newClusterState, computationTime);
+            }
+        }
+    }
+
+    private void publishClusterStateUpdate(
+        ClusterStateTaskExecutor<ClusterStateTaskListener> executor,
+        BatchSummary summary,
+        ClusterState previousClusterState,
+        List<ExecutionResult<ClusterStateTaskListener>> executionResults,
+        ClusterState newClusterState,
+        TimeValue computationTime
+    ) {
+        final Task task = taskManager.register("master", STATE_UPDATE_ACTION_NAME, new TaskAwareRequest() {
+            @Override
+            public void setParentTask(TaskId taskId) {}
+
+            @Override
+            public TaskId getParentTask() {
+                return TaskId.EMPTY_TASK_ID;
+            }
+
+            @Override
+            public String getDescription() {
+                return "publication of cluster state [" + newClusterState.getVersion() + "]";
+            }
+        });
+        try {
             if (logger.isTraceEnabled()) {
                 logger.trace("cluster state updated, source [{}]\n{}", summary, newClusterState);
             } else {
@@ -256,6 +323,7 @@ public class MasterService extends AbstractLifecycleComponent {
                     summary,
                     previousClusterState,
                     newClusterState,
+                    task,
                     computationTime.millis(),
                     publicationStartTime
                 );
@@ -276,110 +344,134 @@ public class MasterService extends AbstractLifecycleComponent {
                 }
 
                 logger.debug("publishing cluster state version [{}]", newClusterState.version());
-                publish(clusterStatePublicationEvent, taskOutputs);
+                // initialize routing nodes and the indices lookup concurrently, we will need both of them for the cluster state
+                // application and can compute them while we wait for the other nodes during publication
+                newClusterState.initializeAsync(threadPool.generic());
+                publish(
+                    clusterStatePublicationEvent,
+                    new CompositeTaskAckListener(
+                        executionResults.stream()
+                            .map(ExecutionResult::getContextPreservingAckListener)
+                            .filter(Objects::nonNull)
+                            .map(
+                                contextPreservingAckListener -> new TaskAckListener(
+                                    contextPreservingAckListener,
+                                    newClusterState.version(),
+                                    newClusterState.nodes(),
+                                    threadPool
+                                )
+                            )
+                            .toList()
+                    ),
+                    new ActionListener<>() {
+                        @Override
+                        public void onResponse(Void unused) {
+                            final long notificationStartTime = threadPool.rawRelativeTimeInMillis();
+                            for (final var executionResult : executionResults) {
+                                executionResult.onPublishSuccess(newClusterState);
+                            }
+
+                            try {
+                                executor.clusterStatePublished(newClusterState);
+                            } catch (Exception e) {
+                                logger.error(
+                                    () -> format(
+                                        "exception thrown while notifying executor of new cluster state publication [%s]",
+                                        summary
+                                    ),
+                                    e
+                                );
+                            }
+                            final TimeValue executionTime = getTimeSince(notificationStartTime);
+                            logExecutionTime(
+                                executionTime,
+                                "notify listeners on successful publication of cluster state (version: "
+                                    + newClusterState.version()
+                                    + ", uuid: "
+                                    + newClusterState.stateUUID()
+                                    + ')',
+                                summary
+                            );
+                            clusterStateUpdateStatsTracker.onPublicationSuccess(
+                                threadPool.rawRelativeTimeInMillis(),
+                                clusterStatePublicationEvent,
+                                executionTime.millis()
+                            );
+                        }
+
+                        @Override
+                        public void onFailure(Exception exception) {
+                            if (exception instanceof FailedToCommitClusterStateException failedToCommitClusterStateException) {
+                                final long notificationStartTime = threadPool.rawRelativeTimeInMillis();
+                                final long version = newClusterState.version();
+                                logger.warn(
+                                    () -> format("failing [%s]: failed to commit cluster state version [%s]", summary, version),
+                                    exception
+                                );
+                                for (final var executionResult : executionResults) {
+                                    executionResult.onPublishFailure(failedToCommitClusterStateException);
+                                }
+                                final long notificationMillis = threadPool.rawRelativeTimeInMillis() - notificationStartTime;
+                                clusterStateUpdateStatsTracker.onPublicationFailure(
+                                    threadPool.rawRelativeTimeInMillis(),
+                                    clusterStatePublicationEvent,
+                                    notificationMillis
+                                );
+                            } else {
+                                assert publicationMayFail() : exception;
+                                clusterStateUpdateStatsTracker.onPublicationFailure(
+                                    threadPool.rawRelativeTimeInMillis(),
+                                    clusterStatePublicationEvent,
+                                    0L
+                                );
+                                handleException(summary, publicationStartTime, newClusterState, exception);
+                            }
+                        }
+                    }
+                );
             } catch (Exception e) {
                 handleException(summary, publicationStartTime, newClusterState, e);
             }
+        } finally {
+            taskManager.unregister(task);
         }
+    }
+
+    protected boolean publicationMayFail() {
+        return false;
     }
 
     private TimeValue getTimeSince(long startTimeMillis) {
         return TimeValue.timeValueMillis(Math.max(0, threadPool.rawRelativeTimeInMillis() - startTimeMillis));
     }
 
-    protected void publish(ClusterStatePublicationEvent clusterStatePublicationEvent, TaskOutputs taskOutputs) {
-        final PlainActionFuture<Void> fut = new PlainActionFuture<Void>() {
+    protected void publish(
+        ClusterStatePublicationEvent clusterStatePublicationEvent,
+        ClusterStatePublisher.AckListener ackListener,
+        ActionListener<Void> publicationListener
+    ) {
+        final var fut = new PlainActionFuture<Void>() {
             @Override
             protected boolean blockingAllowed() {
                 return isMasterUpdateThread() || super.blockingAllowed();
             }
         };
-        clusterStatePublisher.publish(
-            clusterStatePublicationEvent,
-            fut,
-            taskOutputs.createAckListener(threadPool, clusterStatePublicationEvent.getNewState())
-        );
+        clusterStatePublisher.publish(clusterStatePublicationEvent, fut, ackListener);
 
-        // indefinitely wait for publication to complete
-        try {
-            FutureUtils.get(fut);
-            onPublicationSuccess(clusterStatePublicationEvent, taskOutputs);
-        } catch (Exception e) {
-            onPublicationFailed(clusterStatePublicationEvent, taskOutputs, e);
-        }
-    }
-
-    void onPublicationSuccess(ClusterStatePublicationEvent clusterStatePublicationEvent, TaskOutputs taskOutputs) {
-        final long notificationStartTime = threadPool.rawRelativeTimeInMillis();
-        taskOutputs.processedDifferentClusterState(clusterStatePublicationEvent.getOldState(), clusterStatePublicationEvent.getNewState());
-
-        try {
-            taskOutputs.clusterStatePublished(clusterStatePublicationEvent);
-        } catch (Exception e) {
-            logger.error(
-                () -> new ParameterizedMessage(
-                    "exception thrown while notifying executor of new cluster state publication [{}]",
-                    clusterStatePublicationEvent.getSummary()
-                ),
-                e
-            );
-        }
-        final TimeValue executionTime = getTimeSince(notificationStartTime);
-        logExecutionTime(
-            executionTime,
-            "notify listeners on successful publication of cluster state (version: "
-                + clusterStatePublicationEvent.getNewState().version()
-                + ", uuid: "
-                + clusterStatePublicationEvent.getNewState().stateUUID()
-                + ')',
-            clusterStatePublicationEvent.getSummary()
-        );
-        clusterStateUpdateStatsTracker.onPublicationSuccess(
-            threadPool.rawRelativeTimeInMillis(),
-            clusterStatePublicationEvent,
-            executionTime.millis()
+        ActionListener.completeWith(
+            publicationListener,
+            () -> FutureUtils.get(fut) // indefinitely wait for publication to complete
         );
     }
 
-    void onPublicationFailed(ClusterStatePublicationEvent clusterStatePublicationEvent, TaskOutputs taskOutputs, Exception exception) {
-        if (exception instanceof FailedToCommitClusterStateException) {
-            final long notificationStartTime = threadPool.rawRelativeTimeInMillis();
-            final long version = clusterStatePublicationEvent.getNewState().version();
-            logger.warn(
-                () -> new ParameterizedMessage(
-                    "failing [{}]: failed to commit cluster state version [{}]",
-                    clusterStatePublicationEvent.getSummary(),
-                    version
-                ),
-                exception
-            );
-            taskOutputs.publishingFailed((FailedToCommitClusterStateException) exception);
-            final long notificationMillis = threadPool.rawRelativeTimeInMillis() - notificationStartTime;
-            clusterStateUpdateStatsTracker.onPublicationFailure(
-                threadPool.rawRelativeTimeInMillis(),
-                clusterStatePublicationEvent,
-                notificationMillis
-            );
-        } else {
-            assert false : exception;
-            clusterStateUpdateStatsTracker.onPublicationFailure(threadPool.rawRelativeTimeInMillis(), clusterStatePublicationEvent, 0L);
-            handleException(
-                clusterStatePublicationEvent.getSummary(),
-                clusterStatePublicationEvent.getPublicationStartTimeMillis(),
-                clusterStatePublicationEvent.getNewState(),
-                exception
-            );
-        }
-    }
-
-    private void handleException(String summary, long startTimeMillis, ClusterState newClusterState, Exception e) {
+    private void handleException(BatchSummary summary, long startTimeMillis, ClusterState newClusterState, Exception e) {
         final TimeValue executionTime = getTimeSince(startTimeMillis);
         final long version = newClusterState.version();
         final String stateUUID = newClusterState.stateUUID();
         final String fullState = newClusterState.toString();
         logger.warn(
-            new ParameterizedMessage(
-                "took [{}] and then failed to publish updated cluster state (version: {}, uuid: {}) for [{}]:\n{}",
+            () -> format(
+                "took [%s] and then failed to publish updated cluster state (version: %s, uuid: %s) for [%s]:\n%s",
                 executionTime,
                 version,
                 stateUUID,
@@ -391,24 +483,9 @@ public class MasterService extends AbstractLifecycleComponent {
         // TODO: do we want to call updateTask.onFailure here?
     }
 
-    private TaskOutputs calculateTaskOutputs(TaskInputs taskInputs, ClusterState previousClusterState) {
-        ClusterTasksResult<Object> clusterTasksResult = executeTasks(taskInputs, previousClusterState);
-        ClusterState newClusterState = patchVersions(previousClusterState, clusterTasksResult);
-        return new TaskOutputs(
-            taskInputs,
-            previousClusterState,
-            newClusterState,
-            getNonFailedTasks(taskInputs, clusterTasksResult),
-            clusterTasksResult.executionResults
-        );
-    }
-
-    private ClusterState patchVersions(ClusterState previousClusterState, ClusterTasksResult<?> executionResult) {
-        ClusterState newClusterState = executionResult.resultingState;
-
+    private ClusterState patchVersions(ClusterState previousClusterState, ClusterState newClusterState) {
         if (previousClusterState != newClusterState) {
             // only the master controls the version numbers
-            final var previousIndicesLookup = newClusterState.metadata().getIndicesLookup();
             Builder builder = incrementVersion(newClusterState);
             if (previousClusterState.routingTable() != newClusterState.routingTable()) {
                 builder.routingTable(newClusterState.routingTable().withIncrementedVersion());
@@ -417,8 +494,9 @@ public class MasterService extends AbstractLifecycleComponent {
                 builder.metadata(newClusterState.metadata().withIncrementedVersion());
             }
 
+            final var previousMetadata = newClusterState.metadata();
             newClusterState = builder.build();
-            assert previousIndicesLookup == newClusterState.metadata().getIndicesLookup();
+            assert previousMetadata.sameIndicesLookup(newClusterState.metadata());
         }
 
         return newClusterState;
@@ -429,19 +507,41 @@ public class MasterService extends AbstractLifecycleComponent {
     }
 
     /**
-     * Submits a cluster state update task; unlike {@link #submitStateUpdateTask(String, Object, ClusterStateTaskConfig,
-     * ClusterStateTaskExecutor, ClusterStateTaskListener)}, submitted updates will not be batched.
+     * Submits an unbatched cluster state update task. This method exists for legacy reasons but is deprecated and forbidden in new
+     * production code because unbatched tasks are a source of performance and stability bugs. You should instead implement your update
+     * logic in a dedicated {@link ClusterStateTaskExecutor} which is reused across multiple task instances. The task itself is typically
+     * just a collection of parameters consumed by the executor, together with any listeners to be notified when execution completes.
      *
      * @param source     the source of the cluster state update task
      * @param updateTask the full context for the cluster state update
-     *                   task
-     *
      */
-    public <T extends ClusterStateTaskConfig & ClusterStateTaskExecutor<T> & ClusterStateTaskListener> void submitStateUpdateTask(
-        String source,
-        T updateTask
-    ) {
-        submitStateUpdateTask(source, updateTask, updateTask, updateTask, updateTask);
+    @Deprecated
+    public void submitUnbatchedStateUpdateTask(String source, ClusterStateUpdateTask updateTask) {
+        // NB new executor each time so as to avoid batching
+        submitStateUpdateTask(source, updateTask, updateTask, new UnbatchedExecutor());
+    }
+
+    private static class UnbatchedExecutor implements ClusterStateTaskExecutor<ClusterStateUpdateTask> {
+        @Override
+        @SuppressForbidden(reason = "consuming published cluster state for legacy reasons")
+        public ClusterState execute(ClusterState currentState, List<TaskContext<ClusterStateUpdateTask>> taskContexts) throws Exception {
+            assert taskContexts.size() == 1 : "this only supports a single task but received " + taskContexts;
+            final var taskContext = taskContexts.get(0);
+            final var task = taskContext.getTask();
+            final var newState = task.execute(currentState);
+            final Consumer<ClusterState> publishListener = publishedState -> task.clusterStateProcessed(currentState, publishedState);
+            if (task instanceof ClusterStateAckListener ackListener) {
+                taskContext.success(publishListener, ackListener);
+            } else {
+                taskContext.success(publishListener);
+            }
+            return newState;
+        }
+
+        @Override
+        public String describeTasks(List<ClusterStateUpdateTask> tasks) {
+            return ""; // one task, so the source is enough
+        }
     }
 
     /**
@@ -453,101 +553,35 @@ public class MasterService extends AbstractLifecycleComponent {
      * tasks will all be executed on the executor in a single batch
      *
      * @param source   the source of the cluster state update task
-     * @param task     the state needed for the cluster state update task
+     * @param task     the state needed for the cluster state update task, which implements {@link ClusterStateTaskListener} so that it is
+     *                 notified when it is executed.
      * @param config   the cluster state update task configuration
      * @param executor the cluster state update task executor; tasks
      *                 that share the same executor will be executed
      *                 batches on this executor
-     * @param listener callback after the cluster state update task
-     *                 completes
      * @param <T>      the type of the cluster state update task state
      *
      */
-    public <T> void submitStateUpdateTask(
+    public <T extends ClusterStateTaskListener> void submitStateUpdateTask(
         String source,
         T task,
         ClusterStateTaskConfig config,
-        ClusterStateTaskExecutor<T> executor,
-        ClusterStateTaskListener listener
+        ClusterStateTaskExecutor<T> executor
     ) {
-        submitStateUpdateTasks(source, Collections.singletonMap(task, listener), config, executor);
-    }
-
-    /**
-     * Output created by executing a set of tasks provided as TaskInputs
-     */
-    class TaskOutputs {
-        final TaskInputs taskInputs;
-        final ClusterState previousClusterState;
-        final ClusterState newClusterState;
-        final List<Batcher.UpdateTask> nonFailedTasks;
-        final Map<Object, ClusterStateTaskExecutor.TaskResult> executionResults;
-
-        TaskOutputs(
-            TaskInputs taskInputs,
-            ClusterState previousClusterState,
-            ClusterState newClusterState,
-            List<Batcher.UpdateTask> nonFailedTasks,
-            Map<Object, ClusterStateTaskExecutor.TaskResult> executionResults
-        ) {
-            this.taskInputs = taskInputs;
-            this.previousClusterState = previousClusterState;
-            this.newClusterState = newClusterState;
-            this.nonFailedTasks = nonFailedTasks;
-            this.executionResults = executionResults;
+        if (lifecycle.started() == false) {
+            return;
         }
-
-        void publishingFailed(FailedToCommitClusterStateException t) {
-            nonFailedTasks.forEach(task -> task.listener.onFailure(task.source(), t));
-        }
-
-        void processedDifferentClusterState(ClusterState previousClusterState, ClusterState newClusterState) {
-            nonFailedTasks.forEach(task -> task.listener.clusterStateProcessed(task.source(), previousClusterState, newClusterState));
-        }
-
-        void clusterStatePublished(ClusterStatePublicationEvent clusterStatePublicationEvent) {
-            taskInputs.executor.clusterStatePublished(clusterStatePublicationEvent);
-        }
-
-        ClusterStatePublisher.AckListener createAckListener(ThreadPool threadPool, ClusterState newClusterState) {
-            return new DelegatingAckListener(
-                nonFailedTasks.stream()
-                    .filter(task -> task.listener instanceof AckedClusterStateTaskListener)
-                    .map(
-                        task -> new AckCountDownListener(
-                            (AckedClusterStateTaskListener) task.listener,
-                            newClusterState.version(),
-                            newClusterState.nodes(),
-                            threadPool
-                        )
-                    )
-                    .collect(Collectors.toList())
-            );
-        }
-
-        boolean clusterStateUnchanged() {
-            return previousClusterState == newClusterState;
-        }
-
-        void notifyFailedTasks() {
-            // fail all tasks that have failed
-            for (Batcher.UpdateTask updateTask : taskInputs.updateTasks) {
-                assert executionResults.containsKey(updateTask.task) : "missing " + updateTask;
-                final ClusterStateTaskExecutor.TaskResult taskResult = executionResults.get(updateTask.task);
-                if (taskResult.isSuccess() == false) {
-                    updateTask.listener.onFailure(updateTask.source(), taskResult.getFailure());
-                }
+        final ThreadContext threadContext = threadPool.getThreadContext();
+        final Supplier<ThreadContext.StoredContext> supplier = threadContext.newRestorableContext(true);
+        try (ThreadContext.StoredContext ignore = threadContext.stashContext()) {
+            threadContext.markAsSystemContext();
+            taskBatcher.submitTask(taskBatcher.new UpdateTask(config.priority(), source, task, supplier, executor), config.timeout());
+        } catch (EsRejectedExecutionException e) {
+            // ignore cases where we are shutting down..., there is really nothing interesting
+            // to be done here...
+            if (lifecycle.stoppedOrClosed() == false) {
+                throw e;
             }
-        }
-
-        void notifySuccessfulTasksOnUnchangedClusterState() {
-            nonFailedTasks.forEach(task -> {
-                if (task.listener instanceof AckedClusterStateTaskListener) {
-                    // no need to wait for ack if nothing changed, the update can be counted as acknowledged
-                    ((AckedClusterStateTaskListener) task.listener).onAllNodesAcked(null);
-                }
-                task.listener.clusterStateProcessed(task.source(), newClusterState, newClusterState);
-            });
         }
     }
 
@@ -567,7 +601,7 @@ public class MasterService extends AbstractLifecycleComponent {
                 task.getAgeInMillis(),
                 pending.executing
             );
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     /**
@@ -586,111 +620,7 @@ public class MasterService extends AbstractLifecycleComponent {
         return threadPoolExecutor.getMaxTaskWaitTime();
     }
 
-    private SafeClusterStateTaskListener safe(ClusterStateTaskListener listener, Supplier<ThreadContext.StoredContext> contextSupplier) {
-        if (listener instanceof AckedClusterStateTaskListener) {
-            return new SafeAckedClusterStateTaskListener((AckedClusterStateTaskListener) listener, contextSupplier, logger);
-        } else {
-            return new SafeClusterStateTaskListener(listener, contextSupplier, logger);
-        }
-    }
-
-    private static class SafeClusterStateTaskListener implements ClusterStateTaskListener {
-        private final ClusterStateTaskListener listener;
-        protected final Supplier<ThreadContext.StoredContext> context;
-        private final Logger logger;
-
-        SafeClusterStateTaskListener(ClusterStateTaskListener listener, Supplier<ThreadContext.StoredContext> context, Logger logger) {
-            this.listener = listener;
-            this.context = context;
-            this.logger = logger;
-        }
-
-        @Override
-        public void onFailure(String source, Exception e) {
-            try (ThreadContext.StoredContext ignore = context.get()) {
-                listener.onFailure(source, e);
-            } catch (Exception inner) {
-                inner.addSuppressed(e);
-                logger.error(() -> new ParameterizedMessage("exception thrown by listener notifying of failure from [{}]", source), inner);
-            }
-        }
-
-        @Override
-        public void onNoLongerMaster(String source) {
-            try (ThreadContext.StoredContext ignore = context.get()) {
-                listener.onNoLongerMaster(source);
-            } catch (Exception e) {
-                logger.error(
-                    () -> new ParameterizedMessage("exception thrown by listener while notifying no longer master from [{}]", source),
-                    e
-                );
-            }
-        }
-
-        @Override
-        public void clusterStateProcessed(String source, ClusterState oldState, ClusterState newState) {
-            try (ThreadContext.StoredContext ignore = context.get()) {
-                listener.clusterStateProcessed(source, oldState, newState);
-            } catch (Exception e) {
-                logger.error(
-                    () -> new ParameterizedMessage(
-                        "exception thrown by listener while notifying of cluster state processed from [{}], old cluster state:\n"
-                            + "{}\nnew cluster state:\n{}",
-                        source,
-                        oldState,
-                        newState
-                    ),
-                    e
-                );
-            }
-        }
-    }
-
-    private static class SafeAckedClusterStateTaskListener extends SafeClusterStateTaskListener implements AckedClusterStateTaskListener {
-        private final AckedClusterStateTaskListener listener;
-        private final Logger logger;
-
-        SafeAckedClusterStateTaskListener(
-            AckedClusterStateTaskListener listener,
-            Supplier<ThreadContext.StoredContext> context,
-            Logger logger
-        ) {
-            super(listener, context, logger);
-            this.listener = listener;
-            this.logger = logger;
-        }
-
-        @Override
-        public boolean mustAck(DiscoveryNode discoveryNode) {
-            return listener.mustAck(discoveryNode);
-        }
-
-        @Override
-        public void onAllNodesAcked(@Nullable Exception e) {
-            try (ThreadContext.StoredContext ignore = context.get()) {
-                listener.onAllNodesAcked(e);
-            } catch (Exception inner) {
-                inner.addSuppressed(e);
-                logger.error("exception thrown by listener while notifying on all nodes acked", inner);
-            }
-        }
-
-        @Override
-        public void onAckTimeout() {
-            try (ThreadContext.StoredContext ignore = context.get()) {
-                listener.onAckTimeout();
-            } catch (Exception e) {
-                logger.error("exception thrown by listener while notifying on ack timeout", e);
-            }
-        }
-
-        @Override
-        public TimeValue ackTimeout() {
-            return listener.ackTimeout();
-        }
-    }
-
-    private void logExecutionTime(TimeValue executionTime, String activity, String summary) {
+    private void logExecutionTime(TimeValue executionTime, String activity, BatchSummary summary) {
         if (executionTime.getMillis() > slowTaskLoggingThreshold.getMillis()) {
             logger.warn(
                 "took [{}/{}ms] to {} for [{}], which exceeds the warn threshold of [{}]",
@@ -705,34 +635,55 @@ public class MasterService extends AbstractLifecycleComponent {
         }
     }
 
-    private static class DelegatingAckListener implements ClusterStatePublisher.AckListener {
+    /**
+     * A wrapper around a {@link ClusterStateAckListener} which restores the given thread context before delegating to the inner listener's
+     * callbacks, and also logs and swallows any exceptions thrown. One of these is created for each task in the batch that passes a
+     * {@link ClusterStateAckListener} to {@link ClusterStateTaskExecutor.TaskContext#success}.
+     */
+    private record ContextPreservingAckListener(ClusterStateAckListener listener, Supplier<ThreadContext.StoredContext> context) {
 
-        private final List<ClusterStatePublisher.AckListener> listeners;
-
-        private DelegatingAckListener(List<ClusterStatePublisher.AckListener> listeners) {
-            this.listeners = listeners;
+        public boolean mustAck(DiscoveryNode discoveryNode) {
+            return listener.mustAck(discoveryNode);
         }
 
-        @Override
-        public void onCommit(TimeValue commitTime) {
-            for (ClusterStatePublisher.AckListener listener : listeners) {
-                listener.onCommit(commitTime);
+        public void onAckSuccess() {
+            try (ThreadContext.StoredContext ignore = context.get()) {
+                listener.onAllNodesAcked();
+            } catch (Exception inner) {
+                logger.error("exception thrown by listener while notifying on all nodes acked", inner);
             }
         }
 
-        @Override
-        public void onNodeAck(DiscoveryNode node, @Nullable Exception e) {
-            for (ClusterStatePublisher.AckListener listener : listeners) {
-                listener.onNodeAck(node, e);
+        public void onAckFailure(@Nullable Exception e) {
+            try (ThreadContext.StoredContext ignore = context.get()) {
+                listener.onAckFailure(e);
+            } catch (Exception inner) {
+                inner.addSuppressed(e);
+                logger.error("exception thrown by listener while notifying on all nodes acked or failed", inner);
             }
+        }
+
+        public void onAckTimeout() {
+            try (ThreadContext.StoredContext ignore = context.get()) {
+                listener.onAckTimeout();
+            } catch (Exception e) {
+                logger.error("exception thrown by listener while notifying on ack timeout", e);
+            }
+        }
+
+        public TimeValue ackTimeout() {
+            return listener.ackTimeout();
         }
     }
 
-    private static class AckCountDownListener implements ClusterStatePublisher.AckListener {
+    /**
+     * A wrapper around a {@link ContextPreservingAckListener} which keeps track of acks received during publication and notifies the inner
+     * listener when sufficiently many have been received. One of these is created for each {@link ContextPreservingAckListener} once the
+     * state for publication has been computed.
+     */
+    private static class TaskAckListener {
 
-        private static final Logger logger = LogManager.getLogger(AckCountDownListener.class);
-
-        private final AckedClusterStateTaskListener ackedTaskListener;
+        private final ContextPreservingAckListener contextPreservingAckListener;
         private final CountDown countDown;
         private final DiscoveryNode masterNode;
         private final ThreadPool threadPool;
@@ -740,20 +691,20 @@ public class MasterService extends AbstractLifecycleComponent {
         private volatile Scheduler.Cancellable ackTimeoutCallback;
         private Exception lastFailure;
 
-        AckCountDownListener(
-            AckedClusterStateTaskListener ackedTaskListener,
+        TaskAckListener(
+            ContextPreservingAckListener contextPreservingAckListener,
             long clusterStateVersion,
             DiscoveryNodes nodes,
             ThreadPool threadPool
         ) {
-            this.ackedTaskListener = ackedTaskListener;
+            this.contextPreservingAckListener = contextPreservingAckListener;
             this.clusterStateVersion = clusterStateVersion;
             this.threadPool = threadPool;
             this.masterNode = nodes.getMasterNode();
             int countDown = 0;
             for (DiscoveryNode node : nodes) {
                 // we always wait for at least the master node
-                if (node.equals(masterNode) || ackedTaskListener.mustAck(node)) {
+                if (node.equals(masterNode) || contextPreservingAckListener.mustAck(node)) {
                     countDown++;
                 }
             }
@@ -761,9 +712,8 @@ public class MasterService extends AbstractLifecycleComponent {
             this.countDown = new CountDown(countDown + 1); // we also wait for onCommit to be called
         }
 
-        @Override
         public void onCommit(TimeValue commitTime) {
-            TimeValue ackTimeout = ackedTaskListener.ackTimeout();
+            TimeValue ackTimeout = contextPreservingAckListener.ackTimeout();
             if (ackTimeout == null) {
                 ackTimeout = TimeValue.ZERO;
             }
@@ -781,23 +731,15 @@ public class MasterService extends AbstractLifecycleComponent {
             }
         }
 
-        @Override
         public void onNodeAck(DiscoveryNode node, @Nullable Exception e) {
-            if (node.equals(masterNode) == false && ackedTaskListener.mustAck(node) == false) {
+            if (node.equals(masterNode) == false && contextPreservingAckListener.mustAck(node) == false) {
                 return;
             }
             if (e == null) {
                 logger.trace("ack received from node [{}], cluster_state update (version: {})", node, clusterStateVersion);
             } else {
                 this.lastFailure = e;
-                logger.debug(
-                    () -> new ParameterizedMessage(
-                        "ack received from node [{}], cluster_state update (version: {})",
-                        node,
-                        clusterStateVersion
-                    ),
-                    e
-                );
+                logger.debug(() -> format("ack received from node [%s], cluster_state update (version: %s)", node, clusterStateVersion), e);
             }
 
             if (countDown.countDown()) {
@@ -810,135 +752,244 @@ public class MasterService extends AbstractLifecycleComponent {
             if (ackTimeoutCallback != null) {
                 ackTimeoutCallback.cancel();
             }
-            ackedTaskListener.onAllNodesAcked(lastFailure);
+            final var failure = lastFailure;
+            if (failure == null) {
+                contextPreservingAckListener.onAckSuccess();
+            } else {
+                contextPreservingAckListener.onAckFailure(failure);
+            }
         }
 
         public void onTimeout() {
             if (countDown.fastForward()) {
                 logger.trace("timeout waiting for acknowledgement for cluster_state update (version: {})", clusterStateVersion);
-                ackedTaskListener.onAckTimeout();
+                contextPreservingAckListener.onAckTimeout();
             }
         }
     }
 
-    private ClusterTasksResult<Object> executeTasks(TaskInputs taskInputs, ClusterState previousClusterState) {
-        ClusterTasksResult<Object> clusterTasksResult;
-        try {
-            List<Object> inputs = taskInputs.updateTasks.stream().map(tUpdateTask -> tUpdateTask.task).collect(Collectors.toList());
-            clusterTasksResult = taskInputs.executor.execute(previousClusterState, inputs);
-            if (previousClusterState != clusterTasksResult.resultingState
-                && previousClusterState.nodes().isLocalNodeElectedMaster()
-                && (clusterTasksResult.resultingState.nodes().isLocalNodeElectedMaster() == false)) {
-                throw new AssertionError("update task submitted to MasterService cannot remove master");
+    /**
+     * A wrapper around the collection of {@link TaskAckListener}s for a publication.
+     */
+    private record CompositeTaskAckListener(List<TaskAckListener> listeners) implements ClusterStatePublisher.AckListener {
+
+        @Override
+        public void onCommit(TimeValue commitTime) {
+            for (TaskAckListener listener : listeners) {
+                listener.onCommit(commitTime);
             }
+        }
+
+        @Override
+        public void onNodeAck(DiscoveryNode node, @Nullable Exception e) {
+            for (TaskAckListener listener : listeners) {
+                listener.onNodeAck(node, e);
+            }
+        }
+    }
+
+    private static class ExecutionResult<T extends ClusterStateTaskListener> implements ClusterStateTaskExecutor.TaskContext<T> {
+        final Batcher.UpdateTask updateTask;
+
+        @Nullable // if the task is incomplete or failed or onPublicationSuccess supplied
+        Consumer<ClusterState> publishedStateConsumer;
+
+        @Nullable // if the task is incomplete or failed or publishedStateConsumer supplied
+        Runnable onPublicationSuccess;
+
+        @Nullable // if the task is incomplete or failed or doesn't listen for acks
+        ClusterStateAckListener clusterStateAckListener;
+
+        @Nullable // if the task is incomplete or succeeded
+        Exception failure;
+
+        ExecutionResult(Batcher.UpdateTask updateTask) {
+            this.updateTask = updateTask;
+        }
+
+        @SuppressWarnings("unchecked") // trust us this is ok
+        @Override
+        public T getTask() {
+            return (T) updateTask.getTask();
+        }
+
+        private boolean incomplete() {
+            assert assertMasterUpdateOrTestThread();
+            return publishedStateConsumer == null && onPublicationSuccess == null && failure == null;
+        }
+
+        // [HISTORICAL NOTE] In the past, tasks executed by the master service would automatically be notified of acks if they implemented
+        // the ClusterStateAckListener interface (the interface formerly known as AckedClusterStateTaskListener). This implicit behaviour
+        // was a little troublesome and was removed in favour of having the executor explicitly register an ack listener (where necessary)
+        // for each task it successfully executes. Making this change carried the risk that someone might implement a new task in the future
+        // which relied on the old implicit behaviour based on the interfaces that the task implements instead of the explicit behaviour in
+        // the executor. We protect against this with some weird-looking assertions in the success() methods below which insist that
+        // ack-listening tasks register themselves as their own ack listener. If you want to supply a different ack listener then you must
+        // remove the ClusterStateAckListener interface from the task to make it clear that the task itself is not expecting to be notified
+        // of acks.
+        //
+        // Note that the old implicit behaviour lives on in the unbatched() executor so that it can correctly execute either a
+        // ClusterStateUpdateTask or an AckedClusterStateUpdateTask.
+
+        @Override
+        public void success(Runnable onPublicationSuccess) {
+            assert getTask() instanceof ClusterStateAckListener == false // see [HISTORICAL NOTE] above
+                : "tasks that implement ClusterStateAckListener must explicitly supply themselves as the ack listener";
+            assert incomplete();
+            this.onPublicationSuccess = Objects.requireNonNull(onPublicationSuccess);
+        }
+
+        @Override
+        public void success(Consumer<ClusterState> publishListener) {
+            assert getTask() instanceof ClusterStateAckListener == false // see [HISTORICAL NOTE] above
+                : "tasks that implement ClusterStateAckListener must explicitly supply themselves as the ack listener";
+            assert incomplete();
+            this.publishedStateConsumer = Objects.requireNonNull(publishListener);
+        }
+
+        @Override
+        public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {
+            assert getTask() == clusterStateAckListener || getTask() instanceof ClusterStateAckListener == false
+                // see [HISTORICAL NOTE] above
+                : "tasks that implement ClusterStateAckListener must not supply a separate clusterStateAckListener";
+            assert incomplete();
+            this.onPublicationSuccess = Objects.requireNonNull(onPublicationSuccess);
+            this.clusterStateAckListener = Objects.requireNonNull(clusterStateAckListener);
+        }
+
+        @Override
+        public void success(Consumer<ClusterState> publishListener, ClusterStateAckListener clusterStateAckListener) {
+            assert getTask() == clusterStateAckListener || getTask() instanceof ClusterStateAckListener == false
+                // see [HISTORICAL NOTE] above
+                : "tasks that implement ClusterStateAckListener must not supply a separate clusterStateAckListener";
+            assert incomplete();
+            this.publishedStateConsumer = Objects.requireNonNull(publishListener);
+            this.clusterStateAckListener = Objects.requireNonNull(clusterStateAckListener);
+        }
+
+        @Override
+        public void onFailure(Exception failure) {
+            assert incomplete();
+            this.failure = Objects.requireNonNull(failure);
+        }
+
+        void onBatchFailure(Exception failure) {
+            // if the whole batch resulted in an exception then this overrides any task-level results whether successful or not
+            this.failure = Objects.requireNonNull(failure);
+            this.publishedStateConsumer = null;
+            this.clusterStateAckListener = null;
+        }
+
+        void onPublishSuccess(ClusterState newClusterState) {
+            if (publishedStateConsumer == null && onPublicationSuccess == null) {
+                assert failure != null;
+                return;
+            }
+            try (ThreadContext.StoredContext ignored = updateTask.threadContextSupplier.get()) {
+                if (onPublicationSuccess == null) {
+                    publishedStateConsumer.accept(newClusterState);
+                } else {
+                    onPublicationSuccess.run();
+                }
+            } catch (Exception e) {
+                logger.error(() -> format("exception thrown by listener while notifying of new cluster state:\n%s", newClusterState), e);
+            }
+        }
+
+        void onClusterStateUnchanged(ClusterState clusterState) {
+            if (publishedStateConsumer == null && onPublicationSuccess == null) {
+                assert failure != null;
+                return;
+            }
+            try (ThreadContext.StoredContext ignored = updateTask.threadContextSupplier.get()) {
+                if (onPublicationSuccess == null) {
+                    publishedStateConsumer.accept(clusterState);
+                } else {
+                    onPublicationSuccess.run();
+                }
+            } catch (Exception e) {
+                logger.error(() -> format("exception thrown by listener while notifying of unchanged cluster state:\n%s", clusterState), e);
+            }
+        }
+
+        void onPublishFailure(FailedToCommitClusterStateException e) {
+            if (publishedStateConsumer == null && onPublicationSuccess == null) {
+                assert failure != null;
+                return;
+            }
+            try (ThreadContext.StoredContext ignored = updateTask.threadContextSupplier.get()) {
+                getTask().onFailure(e);
+            } catch (Exception inner) {
+                inner.addSuppressed(e);
+                logger.error("exception thrown by listener notifying of failure", inner);
+            }
+        }
+
+        ContextPreservingAckListener getContextPreservingAckListener() {
+            assert incomplete() == false;
+            return updateTask.wrapInTaskContext(clusterStateAckListener);
+        }
+
+        @Override
+        public String toString() {
+            return "TaskContextImpl[" + updateTask.getTask() + "]";
+        }
+    }
+
+    private static ClusterState executeTasks(
+        ClusterState previousClusterState,
+        List<ExecutionResult<ClusterStateTaskListener>> executionResults,
+        ClusterStateTaskExecutor<ClusterStateTaskListener> executor,
+        BatchSummary summary
+    ) {
+        final var resultingState = innerExecuteTasks(previousClusterState, executionResults, executor, summary);
+        if (previousClusterState != resultingState
+            && previousClusterState.nodes().isLocalNodeElectedMaster()
+            && (resultingState.nodes().isLocalNodeElectedMaster() == false)) {
+            throw new AssertionError("update task submitted to MasterService cannot remove master");
+        }
+        assert assertAllTasksComplete(executionResults);
+        return resultingState;
+    }
+
+    private static boolean assertAllTasksComplete(List<ExecutionResult<ClusterStateTaskListener>> executionResults) {
+        for (final var executionResult : executionResults) {
+            assert executionResult.incomplete() == false : "missing result for " + executionResult;
+        }
+        return true;
+    }
+
+    @SuppressWarnings("unchecked") // the input is unmodifiable so it is ok to cast to a more general element type
+    private static List<ClusterStateTaskExecutor.TaskContext<ClusterStateTaskListener>> castTaskContexts(List<?> executionResults) {
+        return (List<ClusterStateTaskExecutor.TaskContext<ClusterStateTaskListener>>) executionResults;
+    }
+
+    private static ClusterState innerExecuteTasks(
+        ClusterState previousClusterState,
+        List<ExecutionResult<ClusterStateTaskListener>> executionResults,
+        ClusterStateTaskExecutor<ClusterStateTaskListener> executor,
+        BatchSummary summary
+    ) {
+        final var taskContexts = castTaskContexts(executionResults);
+        try {
+            return executor.execute(previousClusterState, taskContexts);
         } catch (Exception e) {
             logger.trace(
-                () -> new ParameterizedMessage(
-                    "failed to execute cluster state update (on version: [{}], uuid: [{}]) for [{}]\n{}{}{}",
+                () -> format(
+                    "failed to execute cluster state update (on version: [%s], uuid: [%s]) for [%s]\n%s%s%s",
                     previousClusterState.version(),
                     previousClusterState.stateUUID(),
-                    taskInputs.summary,
+                    summary,
                     previousClusterState.nodes(),
                     previousClusterState.routingTable(),
                     previousClusterState.getRoutingNodes()
-                ), // may be expensive => construct message lazily
+                ),
                 e
             );
-            clusterTasksResult = ClusterTasksResult.builder()
-                .failures(taskInputs.updateTasks.stream().map(updateTask -> updateTask.task)::iterator, e)
-                .build(previousClusterState);
-        }
-
-        assert clusterTasksResult.executionResults != null;
-        assert clusterTasksResult.executionResults.size() == taskInputs.updateTasks.size()
-            : String.format(
-                Locale.ROOT,
-                "expected [%d] task result%s but was [%d]",
-                taskInputs.updateTasks.size(),
-                taskInputs.updateTasks.size() == 1 ? "" : "s",
-                clusterTasksResult.executionResults.size()
-            );
-        if (Assertions.ENABLED) {
-            ClusterTasksResult<Object> finalClusterTasksResult = clusterTasksResult;
-            taskInputs.updateTasks.forEach(
-                updateTask -> {
-                    assert finalClusterTasksResult.executionResults.containsKey(updateTask.task) : "missing task result for " + updateTask;
-                }
-            );
-        }
-
-        return clusterTasksResult;
-    }
-
-    private List<Batcher.UpdateTask> getNonFailedTasks(TaskInputs taskInputs, ClusterTasksResult<Object> clusterTasksResult) {
-        return taskInputs.updateTasks.stream().filter(updateTask -> {
-            assert clusterTasksResult.executionResults.containsKey(updateTask.task) : "missing " + updateTask;
-            final ClusterStateTaskExecutor.TaskResult taskResult = clusterTasksResult.executionResults.get(updateTask.task);
-            return taskResult.isSuccess();
-        }).collect(Collectors.toList());
-    }
-
-    /**
-     * Represents a set of tasks to be processed together with their executor
-     */
-    private class TaskInputs {
-        final String summary;
-        final List<Batcher.UpdateTask> updateTasks;
-        final ClusterStateTaskExecutor<Object> executor;
-
-        TaskInputs(ClusterStateTaskExecutor<Object> executor, List<Batcher.UpdateTask> updateTasks, String summary) {
-            this.summary = summary;
-            this.executor = executor;
-            this.updateTasks = updateTasks;
-        }
-
-        boolean runOnlyWhenMaster() {
-            return executor.runOnlyOnMaster();
-        }
-
-        void onNoLongerMaster() {
-            updateTasks.forEach(task -> task.listener.onNoLongerMaster(task.source()));
-        }
-    }
-
-    /**
-     * Submits a batch of cluster state update tasks; submitted updates are guaranteed to be processed together,
-     * potentially with more tasks of the same executor.
-     *
-     * @param source   the source of the cluster state update task
-     * @param tasks    a map of update tasks and their corresponding listeners
-     * @param config   the cluster state update task configuration
-     * @param executor the cluster state update task executor; tasks
-     *                 that share the same executor will be executed
-     *                 batches on this executor
-     * @param <T>      the type of the cluster state update task state
-     *
-     */
-    public <T> void submitStateUpdateTasks(
-        final String source,
-        final Map<T, ClusterStateTaskListener> tasks,
-        final ClusterStateTaskConfig config,
-        final ClusterStateTaskExecutor<T> executor
-    ) {
-        if (lifecycle.started() == false) {
-            return;
-        }
-        final ThreadContext threadContext = threadPool.getThreadContext();
-        final Supplier<ThreadContext.StoredContext> supplier = threadContext.newRestorableContext(true);
-        try (ThreadContext.StoredContext ignore = threadContext.stashContext()) {
-            threadContext.markAsSystemContext();
-
-            List<Batcher.UpdateTask> safeTasks = tasks.entrySet()
-                .stream()
-                .map(e -> taskBatcher.new UpdateTask(config.priority(), source, e.getKey(), safe(e.getValue(), supplier), executor))
-                .collect(Collectors.toList());
-            taskBatcher.submitTasks(safeTasks, config.timeout());
-        } catch (EsRejectedExecutionException e) {
-            // ignore cases where we are shutting down..., there is really nothing interesting
-            // to be done here...
-            if (lifecycle.stoppedOrClosed() == false) {
-                throw e;
+            for (final var executionResult : executionResults) {
+                executionResult.onBatchFailure(e);
             }
+            return previousClusterState;
         }
     }
 
@@ -1089,4 +1140,7 @@ public class MasterService extends AbstractLifecycleComponent {
         }
     }
 
+    public static boolean isPublishFailureException(Exception e) {
+        return e instanceof NotMasterException || e instanceof FailedToCommitClusterStateException;
+    }
 }
