@@ -10,7 +10,7 @@ package org.elasticsearch.repositories;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
+import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.ActionRunnable;
 import org.elasticsearch.action.StepListener;
@@ -39,10 +39,12 @@ import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
+import org.elasticsearch.core.IOUtils;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.core.TimeValue;
-import org.elasticsearch.core.internal.io.IOUtils;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.repositories.blobstore.MeteredBlobStoreRepository;
+import org.elasticsearch.snapshots.Snapshot;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 
@@ -55,13 +57,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.function.BiConsumer;
+import java.util.function.Function;
 import java.util.stream.Stream;
 
 import static java.util.Collections.unmodifiableMap;
+import static org.elasticsearch.core.Strings.format;
 import static org.elasticsearch.snapshots.SearchableSnapshotsSettings.SEARCHABLE_SNAPSHOTS_REPOSITORY_NAME_SETTING_KEY;
 import static org.elasticsearch.snapshots.SearchableSnapshotsSettings.SEARCHABLE_SNAPSHOTS_REPOSITORY_UUID_SETTING_KEY;
-import static org.elasticsearch.snapshots.SearchableSnapshotsSettings.isSearchableSnapshotStore;
 
 /**
  * Service responsible for maintaining and providing access to snapshot repositories on nodes.
@@ -96,13 +99,16 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
     private volatile Map<String, Repository> repositories = Collections.emptyMap();
     private final RepositoriesStatsArchive repositoriesStatsArchive;
 
+    private final List<BiConsumer<Snapshot, Version>> preRestoreChecks;
+
     public RepositoriesService(
         Settings settings,
         ClusterService clusterService,
         TransportService transportService,
         Map<String, Repository.Factory> typesRegistry,
         Map<String, Repository.Factory> internalTypesRegistry,
-        ThreadPool threadPool
+        ThreadPool threadPool,
+        List<BiConsumer<Snapshot, Version>> preRestoreChecks
     ) {
         this.typesRegistry = typesRegistry;
         this.internalTypesRegistry = internalTypesRegistry;
@@ -121,6 +127,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
             REPOSITORIES_STATS_ARCHIVE_MAX_ARCHIVED_STATS.get(settings),
             threadPool::relativeTimeInMillis
         );
+        this.preRestoreChecks = preRestoreChecks;
     }
 
     /**
@@ -140,7 +147,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
 
         // Trying to create the new repository on master to make sure it works
         try {
-            closeRepository(createRepository(newRepositoryMetadata, typesRegistry));
+            closeRepository(createRepository(newRepositoryMetadata, typesRegistry, RepositoriesService::throwRepositoryTypeDoesNotExists));
         } catch (Exception e) {
             listener.onFailure(e);
             return;
@@ -186,80 +193,90 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
             acknowledgementStep.addListener(listener);
         }
 
-        clusterService.submitStateUpdateTask(
-            "put_repository [" + request.name() + "]",
-            new AckedClusterStateUpdateTask(request, acknowledgementStep) {
+        submitUnbatchedTask("put_repository [" + request.name() + "]", new AckedClusterStateUpdateTask(request, acknowledgementStep) {
 
-                private boolean found = false;
-                private boolean changed = false;
+            private boolean found = false;
+            private boolean changed = false;
 
-                @Override
-                public ClusterState execute(ClusterState currentState) {
-                    Metadata metadata = currentState.metadata();
-                    Metadata.Builder mdBuilder = Metadata.builder(currentState.metadata());
-                    RepositoriesMetadata repositories = metadata.custom(RepositoriesMetadata.TYPE, RepositoriesMetadata.EMPTY);
-                    List<RepositoryMetadata> repositoriesMetadata = new ArrayList<>(repositories.repositories().size() + 1);
-                    for (RepositoryMetadata repositoryMetadata : repositories.repositories()) {
-                        if (repositoryMetadata.name().equals(newRepositoryMetadata.name())) {
-                            Repository existing = RepositoriesService.this.repositories.get(request.name());
-                            if (existing == null) {
-                                existing = RepositoriesService.this.internalRepositories.get(request.name());
-                            }
-                            assert existing != null : "repository [" + newRepositoryMetadata.name() + "] must exist";
-                            assert existing.getMetadata() == repositoryMetadata;
-                            final RepositoryMetadata updatedMetadata;
-                            if (canUpdateInPlace(newRepositoryMetadata, existing)) {
-                                if (repositoryMetadata.settings().equals(newRepositoryMetadata.settings())) {
-                                    // Previous version is the same as this one no update is needed.
-                                    return currentState;
-                                }
-                                // we're updating in place so the updated metadata must point at the same uuid and generations
-                                updatedMetadata = repositoryMetadata.withSettings(newRepositoryMetadata.settings());
-                            } else {
-                                ensureRepositoryNotInUse(currentState, request.name());
-                                updatedMetadata = newRepositoryMetadata;
-                            }
-                            found = true;
-                            repositoriesMetadata.add(updatedMetadata);
-                        } else {
-                            repositoriesMetadata.add(repositoryMetadata);
+            @Override
+            public ClusterState execute(ClusterState currentState) {
+                Metadata metadata = currentState.metadata();
+                Metadata.Builder mdBuilder = Metadata.builder(currentState.metadata());
+                RepositoriesMetadata repositories = metadata.custom(RepositoriesMetadata.TYPE, RepositoriesMetadata.EMPTY);
+                List<RepositoryMetadata> repositoriesMetadata = new ArrayList<>(repositories.repositories().size() + 1);
+                for (RepositoryMetadata repositoryMetadata : repositories.repositories()) {
+                    if (repositoryMetadata.name().equals(newRepositoryMetadata.name())) {
+                        Repository existing = RepositoriesService.this.repositories.get(request.name());
+                        if (existing == null) {
+                            existing = RepositoriesService.this.internalRepositories.get(request.name());
                         }
-                    }
-                    if (found == false) {
-                        repositoriesMetadata.add(new RepositoryMetadata(request.name(), request.type(), request.settings()));
-                    }
-                    repositories = new RepositoriesMetadata(repositoriesMetadata);
-                    mdBuilder.putCustom(RepositoriesMetadata.TYPE, repositories);
-                    changed = true;
-                    return ClusterState.builder(currentState).metadata(mdBuilder).build();
-                }
-
-                @Override
-                public void onFailure(String source, Exception e) {
-                    logger.warn(() -> new ParameterizedMessage("failed to create repository [{}]", request.name()), e);
-                    publicationStep.onFailure(e);
-                    super.onFailure(source, e);
-                }
-
-                @Override
-                public boolean mustAck(DiscoveryNode discoveryNode) {
-                    // repository is created on both master and data nodes
-                    return discoveryNode.isMasterNode() || discoveryNode.canContainData();
-                }
-
-                @Override
-                public void clusterStateProcessed(String source, ClusterState oldState, ClusterState newState) {
-                    if (changed) {
-                        if (found) {
-                            logger.info("updated repository [{}]", request.name());
+                        assert existing != null : "repository [" + newRepositoryMetadata.name() + "] must exist";
+                        assert existing.getMetadata() == repositoryMetadata;
+                        final RepositoryMetadata updatedMetadata;
+                        if (canUpdateInPlace(newRepositoryMetadata, existing)) {
+                            if (repositoryMetadata.settings().equals(newRepositoryMetadata.settings())) {
+                                // Previous version is the same as this one no update is needed.
+                                return currentState;
+                            }
+                            // we're updating in place so the updated metadata must point at the same uuid and generations
+                            updatedMetadata = repositoryMetadata.withSettings(newRepositoryMetadata.settings());
                         } else {
-                            logger.info("put repository [{}]", request.name());
+                            ensureRepositoryNotInUse(currentState, request.name());
+                            updatedMetadata = newRepositoryMetadata;
                         }
+                        found = true;
+                        repositoriesMetadata.add(updatedMetadata);
+                    } else {
+                        repositoriesMetadata.add(repositoryMetadata);
                     }
-                    publicationStep.onResponse(oldState != newState);
                 }
+                if (found == false) {
+                    repositoriesMetadata.add(new RepositoryMetadata(request.name(), request.type(), request.settings()));
+                }
+                repositories = new RepositoriesMetadata(repositoriesMetadata);
+                mdBuilder.putCustom(RepositoriesMetadata.TYPE, repositories);
+                changed = true;
+                return ClusterState.builder(currentState).metadata(mdBuilder).build();
             }
-        );
+
+            @Override
+            public void onFailure(Exception e) {
+                logger.warn(() -> "failed to create repository [" + request.name() + "]", e);
+                publicationStep.onFailure(e);
+                super.onFailure(e);
+            }
+
+            @Override
+            public boolean mustAck(DiscoveryNode discoveryNode) {
+                // repository is created on both master and data nodes
+                return discoveryNode.isMasterNode() || discoveryNode.canContainData();
+            }
+
+            @Override
+            public void clusterStateProcessed(ClusterState oldState, ClusterState newState) {
+                if (changed) {
+                    if (found) {
+                        logger.info("updated repository [{}]", request.name());
+                    } else {
+                        logger.info("put repository [{}]", request.name());
+                    }
+                }
+                publicationStep.onResponse(oldState != newState);
+            }
+        });
+    }
+
+    private void submitUnbatchedTask(@SuppressWarnings("SameParameterValue") String source, ClusterStateUpdateTask task) {
+        submitUnbatchedTask(clusterService, source, task);
+    }
+
+    @SuppressForbidden(reason = "legacy usage of unbatched task") // TODO add support for batching here
+    private static void submitUnbatchedTask(
+        ClusterService clusterService,
+        @SuppressWarnings("SameParameterValue") String source,
+        ClusterStateUpdateTask task
+    ) {
+        clusterService.submitUnbatchedStateUpdateTask(source, task);
     }
 
     /**
@@ -291,7 +308,8 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
             return;
         }
 
-        clusterService.submitStateUpdateTask(
+        submitUnbatchedTask(
+            clusterService,
             "update repository UUID [" + repositoryName + "] to [" + repositoryUuid + "]",
             new ClusterStateUpdateTask() {
                 @Override
@@ -311,12 +329,12 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
                 }
 
                 @Override
-                public void onFailure(String source, Exception e) {
+                public void onFailure(Exception e) {
                     listener.onFailure(e);
                 }
 
                 @Override
-                public void clusterStateProcessed(String source, ClusterState oldState, ClusterState newState) {
+                public void clusterStateProcessed(ClusterState oldState, ClusterState newState) {
                     listener.onResponse(null);
                 }
             }
@@ -332,56 +350,53 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
      * @param listener unregister repository listener
      */
     public void unregisterRepository(final DeleteRepositoryRequest request, final ActionListener<AcknowledgedResponse> listener) {
-        clusterService.submitStateUpdateTask(
-            "delete_repository [" + request.name() + "]",
-            new AckedClusterStateUpdateTask(request, listener) {
+        submitUnbatchedTask("delete_repository [" + request.name() + "]", new AckedClusterStateUpdateTask(request, listener) {
 
-                private final List<String> deletedRepositories = new ArrayList<>();
+            private final List<String> deletedRepositories = new ArrayList<>();
 
-                @Override
-                public ClusterState execute(ClusterState currentState) {
-                    Metadata metadata = currentState.metadata();
-                    Metadata.Builder mdBuilder = Metadata.builder(currentState.metadata());
-                    RepositoriesMetadata repositories = metadata.custom(RepositoriesMetadata.TYPE, RepositoriesMetadata.EMPTY);
-                    if (repositories.repositories().size() > 0) {
-                        List<RepositoryMetadata> repositoriesMetadata = new ArrayList<>(repositories.repositories().size());
-                        boolean changed = false;
-                        for (RepositoryMetadata repositoryMetadata : repositories.repositories()) {
-                            if (Regex.simpleMatch(request.name(), repositoryMetadata.name())) {
-                                ensureRepositoryNotInUse(currentState, repositoryMetadata.name());
-                                ensureNoSearchableSnapshotsIndicesInUse(currentState, repositoryMetadata);
-                                deletedRepositories.add(repositoryMetadata.name());
-                                changed = true;
-                            } else {
-                                repositoriesMetadata.add(repositoryMetadata);
-                            }
-                        }
-                        if (changed) {
-                            repositories = new RepositoriesMetadata(repositoriesMetadata);
-                            mdBuilder.putCustom(RepositoriesMetadata.TYPE, repositories);
-                            return ClusterState.builder(currentState).metadata(mdBuilder).build();
+            @Override
+            public ClusterState execute(ClusterState currentState) {
+                Metadata metadata = currentState.metadata();
+                Metadata.Builder mdBuilder = Metadata.builder(currentState.metadata());
+                RepositoriesMetadata repositories = metadata.custom(RepositoriesMetadata.TYPE, RepositoriesMetadata.EMPTY);
+                if (repositories.repositories().size() > 0) {
+                    List<RepositoryMetadata> repositoriesMetadata = new ArrayList<>(repositories.repositories().size());
+                    boolean changed = false;
+                    for (RepositoryMetadata repositoryMetadata : repositories.repositories()) {
+                        if (Regex.simpleMatch(request.name(), repositoryMetadata.name())) {
+                            ensureRepositoryNotInUse(currentState, repositoryMetadata.name());
+                            ensureNoSearchableSnapshotsIndicesInUse(currentState, repositoryMetadata);
+                            deletedRepositories.add(repositoryMetadata.name());
+                            changed = true;
+                        } else {
+                            repositoriesMetadata.add(repositoryMetadata);
                         }
                     }
-                    if (Regex.isMatchAllPattern(request.name())) { // we use a wildcard so we don't barf if it's not present.
-                        return currentState;
-                    }
-                    throw new RepositoryMissingException(request.name());
-                }
-
-                @Override
-                public void clusterStateProcessed(String source, ClusterState oldState, ClusterState newState) {
-                    if (deletedRepositories.isEmpty() == false) {
-                        logger.info("deleted repositories [{}]", deletedRepositories);
+                    if (changed) {
+                        repositories = new RepositoriesMetadata(repositoriesMetadata);
+                        mdBuilder.putCustom(RepositoriesMetadata.TYPE, repositories);
+                        return ClusterState.builder(currentState).metadata(mdBuilder).build();
                     }
                 }
+                if (Regex.isMatchAllPattern(request.name())) { // we use a wildcard so we don't barf if it's not present.
+                    return currentState;
+                }
+                throw new RepositoryMissingException(request.name());
+            }
 
-                @Override
-                public boolean mustAck(DiscoveryNode discoveryNode) {
-                    // repository was created on both master and data nodes
-                    return discoveryNode.isMasterNode() || discoveryNode.canContainData();
+            @Override
+            public void clusterStateProcessed(ClusterState oldState, ClusterState newState) {
+                if (deletedRepositories.isEmpty() == false) {
+                    logger.info("deleted repositories [{}]", deletedRepositories);
                 }
             }
-        );
+
+            @Override
+            public boolean mustAck(DiscoveryNode discoveryNode) {
+                // repository was created on both master and data nodes
+                return discoveryNode.isMasterNode() || discoveryNode.canContainData();
+            }
+        });
     }
 
     public void verifyRepository(final String repositoryName, final ActionListener<List<DiscoveryNode>> listener) {
@@ -400,10 +415,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
                                     try {
                                         repository.endVerification(verificationToken);
                                     } catch (Exception e) {
-                                        logger.warn(
-                                            () -> new ParameterizedMessage("[{}] failed to finish repository verification", repositoryName),
-                                            e
-                                        );
+                                        logger.warn(() -> "[" + repositoryName + "] failed to finish repository verification", e);
                                         delegatedListener.onFailure(e);
                                         return;
                                     }
@@ -417,10 +429,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
                                 repository.endVerification(verificationToken);
                             } catch (Exception inner) {
                                 inner.addSuppressed(e);
-                                logger.warn(
-                                    () -> new ParameterizedMessage("[{}] failed to finish repository verification", repositoryName),
-                                    inner
-                                );
+                                logger.warn(() -> "[" + repositoryName + "] failed to finish repository verification", inner);
                             }
                             listener.onFailure(e);
                         });
@@ -490,24 +499,29 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
                         archiveRepositoryStats(repository, state.version());
                         repository = null;
                         try {
-                            repository = createRepository(repositoryMetadata, typesRegistry);
+                            repository = createRepository(
+                                repositoryMetadata,
+                                typesRegistry,
+                                RepositoriesService::createUnknownTypeRepository
+                            );
                         } catch (RepositoryException ex) {
                             // TODO: this catch is bogus, it means the old repo is already closed,
                             // but we have nothing to replace it
-                            logger.warn(() -> new ParameterizedMessage("failed to change repository [{}]", repositoryMetadata.name()), ex);
+                            logger.warn(() -> "failed to change repository [" + repositoryMetadata.name() + "]", ex);
+                            repository = new InvalidRepository(repositoryMetadata, ex);
                         }
                     }
                 } else {
                     try {
-                        repository = createRepository(repositoryMetadata, typesRegistry);
+                        repository = createRepository(repositoryMetadata, typesRegistry, RepositoriesService::createUnknownTypeRepository);
                     } catch (RepositoryException ex) {
-                        logger.warn(() -> new ParameterizedMessage("failed to create repository [{}]", repositoryMetadata.name()), ex);
+                        logger.warn(() -> "failed to create repository [" + repositoryMetadata.name() + "]", ex);
+                        repository = new InvalidRepository(repositoryMetadata, ex);
                     }
                 }
-                if (repository != null) {
-                    logger.debug("registering repository [{}]", repositoryMetadata.name());
-                    builder.put(repositoryMetadata.name(), repository);
-                }
+                assert repository != null : "repository should not be null here";
+                logger.debug("registering repository [{}]", repositoryMetadata.name());
+                builder.put(repositoryMetadata.name(), repository);
             }
             for (Repository repo : builder.values()) {
                 repo.updateState(state);
@@ -519,7 +533,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
         }
     }
 
-    private boolean canUpdateInPlace(RepositoryMetadata updatedMetadata, Repository repository) {
+    private static boolean canUpdateInPlace(RepositoryMetadata updatedMetadata, Repository repository) {
         assert updatedMetadata.name().equals(repository.getMetadata().name());
         return repository.getMetadata().type().equals(updatedMetadata.type())
             && repository.canUpdateInPlace(updatedMetadata.settings(), Collections.emptySet());
@@ -581,7 +595,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
             .filter(r -> r instanceof MeteredBlobStoreRepository)
             .map(r -> (MeteredBlobStoreRepository) r)
             .map(MeteredBlobStoreRepository::statsSnapshot)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<RepositoryStatsSnapshot> clearRepositoriesStatsArchive(long maxVersionToClear) {
@@ -592,13 +606,13 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
         RepositoryMetadata metadata = new RepositoryMetadata(name, type, Settings.EMPTY);
         Repository repository = internalRepositories.computeIfAbsent(name, (n) -> {
             logger.debug("put internal repository [{}][{}]", name, type);
-            return createRepository(metadata, internalTypesRegistry);
+            return createRepository(metadata, internalTypesRegistry, RepositoriesService::throwRepositoryTypeDoesNotExists);
         });
         if (type.equals(repository.getMetadata().type()) == false) {
             logger.warn(
-                new ParameterizedMessage(
-                    "internal repository [{}][{}] already registered. this prevented the registration of "
-                        + "internal repository [{}][{}].",
+                () -> format(
+                    "internal repository [%s][%s] already registered. this prevented the registration of "
+                        + "internal repository [%s][%s].",
                     name,
                     repository.getMetadata().type(),
                     name,
@@ -607,9 +621,9 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
             );
         } else if (repositories.containsKey(name)) {
             logger.warn(
-                new ParameterizedMessage(
-                    "non-internal repository [{}] already registered. this repository will block the "
-                        + "usage of internal repository [{}][{}].",
+                () -> format(
+                    "non-internal repository [%s] already registered. this repository will block the "
+                        + "usage of internal repository [%s][%s].",
                     name,
                     metadata.type(),
                     name
@@ -622,7 +636,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
         Repository repository = internalRepositories.remove(name);
         if (repository != null) {
             RepositoryMetadata metadata = repository.getMetadata();
-            logger.debug(() -> new ParameterizedMessage("delete internal repository [{}][{}].", metadata.type(), name));
+            logger.debug(() -> format("delete internal repository [%s][%s].", metadata.type(), name));
             closeRepository(repository);
         }
     }
@@ -630,7 +644,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
     /**
      * Closes the given repository.
      */
-    private void closeRepository(Repository repository) {
+    private static void closeRepository(Repository repository) {
         logger.debug("closing repository [{}][{}]", repository.getMetadata().type(), repository.getMetadata().name());
         repository.close();
     }
@@ -647,11 +661,15 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
     /**
      * Creates repository holder. This method starts the repository
      */
-    private Repository createRepository(RepositoryMetadata repositoryMetadata, Map<String, Repository.Factory> factories) {
+    private static Repository createRepository(
+        RepositoryMetadata repositoryMetadata,
+        Map<String, Repository.Factory> factories,
+        Function<RepositoryMetadata, Repository> defaultFactory
+    ) {
         logger.debug("creating repository [{}][{}]", repositoryMetadata.type(), repositoryMetadata.name());
         Repository.Factory factory = factories.get(repositoryMetadata.type());
         if (factory == null) {
-            throw new RepositoryException(repositoryMetadata.name(), "repository type [" + repositoryMetadata.type() + "] does not exist");
+            return defaultFactory.apply(repositoryMetadata);
         }
         Repository repository = null;
         try {
@@ -660,12 +678,22 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
             return repository;
         } catch (Exception e) {
             IOUtils.closeWhileHandlingException(repository);
-            logger.warn(
-                new ParameterizedMessage("failed to create repository [{}][{}]", repositoryMetadata.type(), repositoryMetadata.name()),
-                e
-            );
+            logger.warn(() -> format("failed to create repository [%s][%s]", repositoryMetadata.type(), repositoryMetadata.name()), e);
             throw new RepositoryException(repositoryMetadata.name(), "failed to create repository", e);
         }
+    }
+
+    private static Repository throwRepositoryTypeDoesNotExists(RepositoryMetadata repositoryMetadata) {
+        throw new RepositoryException(repositoryMetadata.name(), "repository type [" + repositoryMetadata.type() + "] does not exist");
+    }
+
+    private static Repository createUnknownTypeRepository(RepositoryMetadata repositoryMetadata) {
+        logger.warn(
+            "[{}] repository type [{}] is unknown; ensure that all required plugins are installed on this node",
+            repositoryMetadata.name(),
+            repositoryMetadata.type()
+        );
+        return new UnknownTypeRepository(repositoryMetadata);
     }
 
     private static void validate(final String repositoryName) {
@@ -712,7 +740,7 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
         long count = 0L;
         List<Index> indices = null;
         for (IndexMetadata indexMetadata : clusterState.metadata()) {
-            if (indexSettingsMatchRepositoryMetadata(indexMetadata.getSettings(), repositoryMetadata)) {
+            if (indexSettingsMatchRepositoryMetadata(indexMetadata, repositoryMetadata)) {
                 if (indices == null) {
                     indices = new ArrayList<>();
                 }
@@ -734,8 +762,9 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
         }
     }
 
-    private static boolean indexSettingsMatchRepositoryMetadata(Settings indexSettings, RepositoryMetadata repositoryMetadata) {
-        if (isSearchableSnapshotStore(indexSettings)) {
+    private static boolean indexSettingsMatchRepositoryMetadata(IndexMetadata indexMetadata, RepositoryMetadata repositoryMetadata) {
+        if (indexMetadata.isSearchableSnapshot()) {
+            final Settings indexSettings = indexMetadata.getSettings();
             final String indexRepositoryUuid = indexSettings.get(SEARCHABLE_SNAPSHOTS_REPOSITORY_UUID_SETTING_KEY);
             if (Strings.hasLength(indexRepositoryUuid)) {
                 return Objects.equals(repositoryMetadata.uuid(), indexRepositoryUuid);
@@ -752,6 +781,10 @@ public class RepositoriesService extends AbstractLifecycleComponent implements C
             "trying to modify or unregister repository that is currently used (" + reason + ')',
             "trying to modify or unregister repository [" + repository + "] that is currently used (" + reason + ')'
         );
+    }
+
+    public List<BiConsumer<Snapshot, Version>> getPreRestoreVersionChecks() {
+        return preRestoreChecks;
     }
 
     @Override
