@@ -11,15 +11,14 @@ package org.elasticsearch.script;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.xcontent.ToXContentFragment;
 import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 // This class is deprecated in favor of ScriptStats and ScriptContextStats
 public class ScriptCacheStats implements Writeable, ToXContentFragment {
@@ -46,7 +45,7 @@ public class ScriptCacheStats implements Writeable, ToXContentFragment {
 
         general = null;
         int size = in.readInt();
-        Map<String, ScriptStats> context = new HashMap<>(size);
+        Map<String, ScriptStats> context = Maps.newMapWithExpectedSize(size);
         for (int i = 0; i < size; i++) {
             String name = in.readString();
             context.put(name, new ScriptStats(in));
@@ -64,7 +63,7 @@ public class ScriptCacheStats implements Writeable, ToXContentFragment {
 
         out.writeBoolean(true);
         out.writeInt(context.size());
-        for (String name : context.keySet().stream().sorted().collect(Collectors.toList())) {
+        for (String name : context.keySet().stream().sorted().toList()) {
             out.writeString(name);
             context.get(name).writeTo(out);
         }
@@ -89,7 +88,7 @@ public class ScriptCacheStats implements Writeable, ToXContentFragment {
         builder.endObject();
 
         builder.startArray(Fields.CONTEXTS);
-        for (String name : context.keySet().stream().sorted().collect(Collectors.toList())) {
+        for (String name : context.keySet().stream().sorted().toList()) {
             ScriptStats stats = context.get(name);
             builder.startObject();
             builder.field(Fields.CONTEXT, name);
