@@ -9,10 +9,12 @@
 package org.elasticsearch.cluster.routing.allocation;
 
 import org.elasticsearch.Version;
+import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.action.shard.ShardStateAction;
 import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -21,14 +23,13 @@ import org.elasticsearch.cluster.routing.RoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.allocation.command.AllocateEmptyPrimaryAllocationCommand;
 import org.elasticsearch.cluster.routing.allocation.command.AllocationCommands;
+import org.elasticsearch.cluster.service.ClusterStateTaskExecutorUtils;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.set.Sets;
 import org.junit.Before;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -46,7 +47,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
     @Before
     public void setupAllocationService() {
         allocation = createAllocationService();
-        failedClusterStateTaskExecutor = new ShardStateAction.ShardFailedClusterStateTaskExecutor(allocation, null, logger);
+        failedClusterStateTaskExecutor = new ShardStateAction.ShardFailedClusterStateTaskExecutor(allocation, null);
     }
 
     public void testInSyncAllocationIdsUpdated() {
@@ -59,7 +60,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
                     .settings(settings(Version.CURRENT))
                     .numberOfShards(1)
                     .numberOfReplicas(2)
-                    .putInSyncAllocationIds(0, new HashSet<>(Arrays.asList("x", "y")))
+                    .putInSyncAllocationIds(0, Set.of("x", "y"))
             )
             .build();
         RoutingTable routingTable = RoutingTable.builder().addAsNew(metadata.index("test")).build();
@@ -74,7 +75,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         clusterState = allocation.reroute(clusterState, "reroute");
 
         assertThat(clusterState.metadata().index("test").inSyncAllocationIds(0).size(), equalTo(0));
-        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(new HashSet<>(Arrays.asList("x", "y"))));
+        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(Set.of("x", "y")));
 
         logger.info("start primary shard");
         clusterState = startInitializingShardsAndReroute(allocation, clusterState);
@@ -85,7 +86,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
             shardsWithState(clusterState.getRoutingNodes(), STARTED).get(0).allocationId().getId(),
             equalTo(clusterState.metadata().index("test").inSyncAllocationIds(0).iterator().next())
         );
-        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(new HashSet<>(Arrays.asList("x", "y"))));
+        assertThat(clusterState.metadata().index("test-old").inSyncAllocationIds(0), equalTo(Set.of("x", "y")));
 
         logger.info("start replica shards");
         clusterState = startInitializingShardsAndReroute(allocation, clusterState);
@@ -116,7 +117,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
             new AllocationCommands(new AllocateEmptyPrimaryAllocationCommand("test", 0, "node1", true)),
             false,
             false
-        ).getClusterState();
+        ).clusterState();
 
         // check that in-sync allocation ids are reset by forcing an empty primary
         assertThat(clusterState.metadata().index("test").inSyncAllocationIds(0).size(), equalTo(0));
@@ -129,7 +130,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
 
         logger.info("fail primary shard");
         ShardRouting startedPrimary = shardsWithState(clusterState.getRoutingNodes(), STARTED).get(0);
-        clusterState = allocation.applyFailedShard(clusterState, startedPrimary, true);
+        clusterState = allocation.applyFailedShards(clusterState, List.of(new FailedShard(startedPrimary, null, null, true)), List.of());
 
         assertThat(shardsWithState(clusterState.getRoutingNodes(), STARTED).size(), equalTo(0));
         assertEquals(
@@ -160,14 +161,25 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         logger.info("fail replica (for which there is no shard routing in the CS anymore)");
         assertNull(clusterState.getRoutingNodes().getByAllocationId(replicaShard.shardId(), replicaShard.allocationId().getId()));
         ShardStateAction.ShardFailedClusterStateTaskExecutor failedClusterStateTaskExecutor =
-            new ShardStateAction.ShardFailedClusterStateTaskExecutor(allocation, null, logger);
+            new ShardStateAction.ShardFailedClusterStateTaskExecutor(allocation, null);
         long primaryTerm = clusterState.metadata().index("test").primaryTerm(0);
-        clusterState = failedClusterStateTaskExecutor.execute(
+        clusterState = ClusterStateTaskExecutorUtils.executeAndAssertSuccessful(
             clusterState,
-            Arrays.asList(
-                new FailedShardEntry(shardRoutingTable.shardId(), replicaShard.allocationId().getId(), primaryTerm, "dummy", null, true)
+            failedClusterStateTaskExecutor,
+            List.of(
+                new FailedShardUpdateTask(
+                    new FailedShardEntry(
+                        shardRoutingTable.shardId(),
+                        replicaShard.allocationId().getId(),
+                        primaryTerm,
+                        "dummy",
+                        null,
+                        true
+                    ),
+                    createTestListener()
+                )
             )
-        ).resultingState;
+        );
 
         assertThat(clusterState.metadata().index("test").inSyncAllocationIds(0).size(), equalTo(1));
     }
@@ -188,15 +200,27 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
 
         long primaryTerm = clusterState.metadata().index("test").primaryTerm(0);
 
-        List<FailedShardEntry> failureEntries = new ArrayList<>();
-        failureEntries.add(new FailedShardEntry(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true));
+        List<FailedShardUpdateTask> failureEntries = new ArrayList<>();
         failureEntries.add(
-            new FailedShardEntry(shardRoutingTable.shardId(), replicaShard.allocationId().getId(), primaryTerm, "dummy", null, true)
+            new FailedShardUpdateTask(
+                new FailedShardEntry(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true),
+                createTestListener()
+            )
+        );
+        failureEntries.add(
+            new FailedShardUpdateTask(
+                new FailedShardEntry(shardRoutingTable.shardId(), replicaShard.allocationId().getId(), primaryTerm, "dummy", null, true),
+                createTestListener()
+            )
         );
         Collections.shuffle(failureEntries, random());
         logger.info("Failing {}", failureEntries);
 
-        clusterState = failedClusterStateTaskExecutor.execute(clusterState, failureEntries).resultingState;
+        clusterState = ClusterStateTaskExecutorUtils.executeAndAssertSuccessful(
+            clusterState,
+            failedClusterStateTaskExecutor,
+            failureEntries
+        );
 
         assertThat(
             clusterState.metadata().index("test").inSyncAllocationIds(0),
@@ -204,7 +228,7 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         );
 
         // resend shard failures to check if they are ignored
-        clusterState = failedClusterStateTaskExecutor.execute(clusterState, failureEntries).resultingState;
+        clusterState = ClusterStateTaskExecutorUtils.executeIgnoringFailures(clusterState, failedClusterStateTaskExecutor, failureEntries);
 
         assertThat(
             clusterState.metadata().index("test").inSyncAllocationIds(0),
@@ -336,12 +360,16 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         assertEquals(inSyncSet, clusterState.metadata().index("test").inSyncAllocationIds(0));
 
         logger.info("fail primary shard");
-        clusterState = failedClusterStateTaskExecutor.execute(
+        clusterState = ClusterStateTaskExecutorUtils.executeAndAssertSuccessful(
             clusterState,
-            Collections.singletonList(
-                new FailedShardEntry(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true)
+            failedClusterStateTaskExecutor,
+            List.of(
+                new FailedShardUpdateTask(
+                    new FailedShardEntry(shardRoutingTable.shardId(), primaryShard.allocationId().getId(), 0L, "dummy", null, true),
+                    createTestListener()
+                )
             )
-        ).resultingState;
+        );
 
         assertThat(clusterState.routingTable().index("test").shard(0).assignedShards().size(), equalTo(0));
         // in-sync allocation ids should not be updated
@@ -380,5 +408,9 @@ public class InSyncAllocationIdTests extends ESAllocationTestCase {
         clusterState = startInitializingShardsAndReroute(allocation, clusterState);
         assertThat(clusterState.metadata().index("test").inSyncAllocationIds(0).size(), equalTo(2));
         return clusterState;
+    }
+
+    private static <T> ActionListener<T> createTestListener() {
+        return ActionListener.wrap(() -> { throw new AssertionError("task should not complete"); });
     }
 }
